Registration: Fixing widths on all steps. Making button right-aligned. Styling Subscribe Pages step. Styling error handling. Styled scrollbar for webkit browsers.

--- a/app/stylesheets/layout/_tour.sass
+++ b/app/stylesheets/layout/_tour.sass
@@ -17,7 +17,7 @@
   display: none
   position: absolute
   z-index: 2000
-  height: auto !important
+  //height: auto !important
 
 .welcome
   width: 460px
