--- a/app/stylesheets/modules/_tour.sass
+++ b/app/stylesheets/modules/_tour.sass
@@ -144,7 +144,7 @@ p.welcome-divider
     font-family: $Yellowtail
     text-shadow: 0px 2px 0px #fff
     color: $red
-    margin: 0px auto 20px auto
+    margin: -5px auto 20px auto
     padding-bottom: 0px
   img.profile_pic
     margin-bottom: 18px
@@ -157,7 +157,7 @@ p.welcome-divider
     height: 45px
     line-height: 11px
   input
-    width: 377px
+    width: 382px
     border-radius: 4px
     margin-top: 0px
     margin-bottom: 15px
@@ -190,7 +190,7 @@ p.welcome-divider
   input.website
     float: left
   textarea
-    width: 377px
+    width: 382px
     height: 50px
     margin-top: 0px
     margin-bottom: 15px
@@ -227,8 +227,8 @@ p.welcome-divider
       cursor: pointer  
     p 
       margin-bottom: 0px
-      font-size: 18px
-      line-height: 22px
+      font-size: 17px
+      line-height: 20px
   .create_page
     float: left
     .chzn-container
@@ -453,30 +453,28 @@ p.welcome-divider
   margin-top: 57px
   padding: 20px
 
+#findNeighbors
+  h2
+    font-size: 38px !important
 
 #findNeighbors ul.subscribe_categories
-  margin: 0px auto
   padding-bottom: 15px
   text-align: center
-  margin-left: -1px
-
   li 
-    display: inline-block
-    margin-right: 5px
-    padding: 4px 5px 3px 5px
-    border-radius: 5px
+    //padding: 4px 5px 3px 5px
+    //border-radius: 5px
     &:last-child
       margin-right: 0px
     &:hover
-      display: inline-block
-      background-color: $blue
+      //display: inline-block
+      //background-color: $blue
       a
-        color: #fff
-        text-shadow: none
+        color: $red
+        //text-shadow: none
 
 #findNeighbors ul.subscribe_categories li a 
   color: $blue
-  font-size: 18px
+  font-size: 17px
   text-decoration: none
   padding: 0px
   top: 0px
@@ -484,22 +482,11 @@ p.welcome-divider
   text-shadow: 1px 1px 0px #fff
 
 #subscribe_pages
-  margin-right: auto
-  margin-left: auto
-  overflow: auto
-  overflow-x: hidden
-  background-color: rgba(0, 0, 0, 0.0125)
-  border: 1px solid #bbb
-  box-shadow: inset 0px 0px 3px 2px rgba(0,0,0,0.12), white 0px 1px 0px
-  padding: 0px 10px 10px 15px
-  border-radius: 4px
-  margin-bottom: 15px
-  div.page_category
-    margin-bottom: 0px
-  ul.subscribe_pages
-    margin-bottom: 0px
-    margin-right: 0px
-    display: inline-block
+  //background-color: rgba(0, 0, 0, 0.0125)
+  //border: 1px solid #bbb
+  //box-shadow: inset 0px 0px 3px 2px rgba(0,0,0,0.12), white 0px 1px 0px
+  //padding: 0px 10px 10px 15px
+  //border-radius: 4px
 
 #subscribe_pages ul.subscribe_pages li
   overflow: hidden
@@ -582,7 +569,7 @@ img.page_img
   height: 64px
   float: left
 
-#subscribe_pages a h2
+#subscribe_pages a h3
   color: $red
   padding-top: 20px
   padding-bottom: 10px
@@ -809,9 +796,6 @@ div#RealFindNeighbors div#find_bottom
   right: 150px
   cursor:  pointer
 
-div#find_button
-  margin: 0px auto
-  width: 200px
 
 //div#findNeighbors.container div#find_bottom #find_button a.blue-button.next-button
   padding: 10px 20px
@@ -870,13 +854,10 @@ div#find_button
   color: #131313 !important
   input::-webkit-input-placeholder, input:-moz-placeholder, input::-moz-placeholder
     color: #555 !important
-div#subscribe_pages ul.subscribe_pages div.page_item
-  float: left
 
-      
 /************* END OF IMPORTED STYLES ***********/  
 
-#civicProfile, #norms, #register
+#civicProfile, #norms, #register, #findNeighbors
   overflow: none
   background-color: #eeecdf
   background: url(shared/redesign/tan-bg.png) center center
